syntax = "proto3";

option go_package = ".";

package number_stream;

service NumberStream {
  rpc GenerateNumbers (NumberRequest) returns (stream NumberResponse);
}

message NumberRequest {
  int32 limit = 1;
}

message NumberResponse {
  int32 number = 1;
}